@@ -28,10 +28,9 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.withType(Javadoc).configureEach {
-    options.addMultilineMultiValueOption('add-exports').value = [
-            ['jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'],
-            ['jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
-    ]
+    options.addBooleanOption('J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED', true)
+    options.addBooleanOption('J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED', true)
+    options.addStringOption('Xdoclint:none', '-quiet')
 }
 
 dependencies {
